--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -267,6 +267,7 @@ jobs:
           sudo sed -i '/NVM_DIR/d;/skel/d' /root/{.bashrc,.profile}
           sudo rm -rf ~/{.cargo,.dotnet,.rustup}
           sudo timedatectl set-timezone "${TZ}"
+          sudo locale-gen en_US.UTF-8
           echo "status=success" >> ${GITHUB_OUTPUT}
 
       - name: Create simulated physical disk
